fix: update login and update scroll on mobile

--- a/src/app/components/tasks-list/tasks-list.component.scss
+++ b/src/app/components/tasks-list/tasks-list.component.scss
@@ -9,6 +9,7 @@
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
+    height: 100%;
 
     &::-webkit-scrollbar { width: 0; }
   }
